<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/first"
    tools:context=".Fragment.Profile.EditProfile"
    tools:ignore="SpeakableTextPresentCheck">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            />

        <LinearLayout
            android:id="@+id/con"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.elishi.android.View.CustomViews.AppTextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                android:textColor="@color/fourth"
                android:textSize="16sp"
                app:tvFont="bold" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fullNameCon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:hint="@string/full_name"
                android:textSize="14sp"
                app:startIconDrawable="@drawable/ic_profile"
                app:startIconTint="@color/second">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fullName"
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailCon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:visibility="gone"
                android:layout_marginTop="12dp"
                android:hint="@string/email"
                android:textSize="14sp"
                app:startIconDrawable="@drawable/ic_baseline_email_24"
                app:startIconTint="@color/second">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/regionCon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:startIconDrawable="@drawable/ic_baseline_location_on_24"
                app:startIconTint="@color/second"
                android:textSize="14sp"
                android:hint="@string/your_located_place">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/region"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="14sp"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addressCon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:startIconDrawable="@drawable/ic_baseline_location_city_24"
                app:startIconTint="@color/second"
                android:textSize="14sp"
                android:hint="@string/your_address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="14sp"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <RadioGroup
                android:orientation="horizontal"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/man"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/man"
                    />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/women"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/women"
                    />

            </RadioGroup>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/verifyCodeCon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="12dp"
                app:startIconDrawable="@drawable/ic_baseline_fact_check_24"
                app:startIconTint="@color/second"
                android:textSize="14sp"
                android:hint="@string/email_verify">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/verifyCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="6"
                    android:textSize="14sp"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:textColor="#FFFFFF"
                android:text="@string/save"
                android:enabled="false"
                />





        </LinearLayout>

    </LinearLayout>

</ScrollView>