<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/top_round"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="120dp"
        android:layout_height="5dp"
        android:layout_marginTop="12dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bottom_sheet_round"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/download"
        android:background="?android:attr/selectableItemBackground"
        android:padding="8dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/ic_settings"
            android:layout_margin="8dp"/>

        <TextView
            android:id="@+id/settingsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/fourth"
            android:textSize="14sp"
            android:layout_gravity="center_vertical"
            android:padding="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/shareLinearLayout"
        android:background="?android:attr/selectableItemBackground"
        android:padding="8dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/ic_about"
            android:layout_margin="8dp"/>

        <TextView
            android:id="@+id/aboutTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textColor="@color/fourth"
            android:textSize="14sp"
            android:layout_gravity="center_vertical"
            android:padding="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/uploadLinearLaySout"
        android:background="?android:attr/selectableItemBackground"
        android:padding="8dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/ic_help"
            android:layout_margin="8dp"/>

        <TextView
            android:id="@+id/helpTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:textColor="@color/fourth"
            android:textSize="14sp"
            android:layout_gravity="center_vertical"
            android:padding="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/copyLinearLayout"
        android:background="?android:attr/selectableItemBackground"
        android:padding="8dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/ic_edit"
            android:layout_margin="8dp"/>

        <TextView
            android:id="@+id/editTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textColor="@color/fourth"
            android:textSize="14sp"
            android:layout_gravity="center_vertical"
            android:padding="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/delete"
        android:background="?android:attr/selectableItemBackground"
        android:padding="8dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/ic_logout"
            android:layout_margin="8dp"/>

        <TextView
            android:id="@+id/logoutTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textColor="@color/fourth"
            android:textSize="14sp"
            android:layout_gravity="center_vertical"
            android:padding="8dp"/>
    </LinearLayout>
</LinearLayout>