<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:orientation="vertical"
        android:paddingTop="22dp"
        android:background="@drawable/transparent_alert_bg"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.elishi.android.View.CustomViews.AppTextView
            android:id="@+id/alertTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/is_logout"
            android:textSize="18sp"
            app:tvFont="medium"
            android:textColor="@color/fourth"
            />


        <View
            android:layout_marginTop="22dp"
            android:layout_width="match_parent"
            android:layout_height="0.4dp"
            android:background="@color/stroke"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.elishi.android.View.CustomViews.AppTextView
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:padding="16dp"
                android:textColor="@color/second"
                android:text="@string/cancel"
                android:textSize="14sp"
                app:tvFont="medium"
                />
            <View
                android:layout_width="0.4dp"
                android:layout_height="match_parent"
                android:background="@color/stroke"
                />
            <com.elishi.android.View.CustomViews.AppTextView
                android:id="@+id/okButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:padding="16dp"
                android:textColor="@color/second"
                android:text="@string/yes"
                android:textSize="14sp"
                app:tvFont="medium"
                />
        </LinearLayout>

    </LinearLayout>



</RelativeLayout>